# PerspectiveGap

./: .gitignore  README.md  SUBMIT_RESULTS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: result_submission.yml
data/distractors/: universal_best_practice_be_clear_and_direct.md  universal_best_practice_role_and_long_context.md  universal_best_practice_use_xml_tags.md
data/scenarios/: pg_000.md  pg_001.md  pg_002.md  pg_003.md  pg_004.md  pg_005.md  pg_006.md  pg_007.md  pg_008.md  pg_009.md  pg_010.md  pg_011.md  pg_012.md  pg_013.md  pg_014.md  pg_015.md  pg_016.md  pg_017.md  pg_018.md  pg_019.md  pg_020.md  pg_021.md  pg_022.md  pg_023.md  pg_024.md  pg_025.md  pg_026.md  pg_027.md  pg_028.md  pg_029.md  pg_030.md  pg_031.md  pg_032.md  pg_033.md  pg_034.md  pg_035.md  pg_036.md  pg_037.md  pg_038.md  pg_039.md  (+70 more)
hf/: LICENSE  README.md
scripts/: build_hf_evaluations.py  run_model_predictions.py  score_predictions.py
src/perspective_gap/: __init__.py  model_runner.py  renderer.py  scoring.py
tests/: test_model_runner.py  test_renderer.py  test_scoring.py  validate_scorer.py
tests/fixtures/: example_predictions.jsonl
