[project]
name = "perspective-gap"
version = "0.1.0"
description = "PerspectiveGap benchmark rendering and scoring utilities"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.103.1",
    "openai>=2.36.0",
    "pyyaml>=6.0.3",
    "tokenizers>=0.23.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
